--- a/web/src/App.css
+++ b/web/src/App.css
@@ -2,28 +2,44 @@ html, body, #root {
   height: 100%;
 }
 
-.App {
+.app-container {
   text-align: center;
   margin: 20px;
 }
 
-.landingPage {
-  text-align: center;
+.app-container > .stepperControls {
+  box-sizing: border-box;
+  margin: 10px;
+}
+
+.app-container > .stepperControls > .stepperButton {
+  box-sizing: border-box;
+  margin: 10px;
+}
+
+.grid-container {
+  width: 100%;
   height: 100%;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
 }
 
-.cardImage {
+.grid-container > .game-card-container {
+  margin: 10px;
+}
+
+.game-card-container .cardImage {
   display: block;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
 
-.cardImage .selectCheckbox {
+.game-card-container .cardImage .selectCheckbox {
   background-color: white;
 }
 
-.cardImage .selectCheckbox:hover {
+.game-card-container .cardImage .selectCheckbox:hover {
   background-color: white;
 }
