added restart button after submission and did some refactoring

--- a/web/src/App.css
+++ b/web/src/App.css
@@ -11,7 +11,7 @@ html, body, #root {
   margin: 10px;
 }
 
-.app-container .stepper-controls > .stepper-button {
+.app-container .button {
   margin: 10px;
 }
 
