--- a/web/src/App.css
+++ b/web/src/App.css
@@ -15,6 +15,11 @@ html, body, #root {
   margin: 10px;
 }
 
+.dialog .button {
+  margin: 10px;
+  float: center;
+}
+
 .landing-page-container {
   display: flex;
   flex-direction: column;
